--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,12 @@
 ---
 title: 'Reproducible Research: Peer Assessment 1'
-author: Al Anderson
-date: 7/11/2015
+author: "Al Anderson"
+date: "7/11/2015"
 output:
+  pdf_document: default
   html_document:
     keep_md: yes
+  word_document: default
 ---
 
 ## Project Requirements
@@ -150,10 +152,17 @@ p1 <- ggplot(data=interval_mean_weekday,
 p2 <- ggplot(data=interval_mean_weekend, 
        aes(x=interval, y=mean)) + geom_line() +   
        labs(x = "Intervals", y = "Number of Steps")
+p1 <- p1 + theme_bw()
+p2 <- p2 + theme_bw()
 plot_grid(p2,p1, labels = c("Weekend", "Weekday"), label_size = 10, ncol=1, nrow = 2)
 
 ```
 ```{r plot 4}
+interval_mean_weekend <- mutate(interval_mean_weekend, day_of_week = as.factor("Weekend"))
+interval_mean_weekday <- mutate(interval_mean_weekday, day_of_week = as.factor("Weekday"))
+interval_mean <- rbind(interval_mean_weekday, interval_mean_weekend)
+g <- ggplot(interval_mean, aes(interval, mean))
+g + geom_line() + facet_grid(day_of_week~.) + theme_bw() + labs(x = "Intervals", y = "Number of Steps")
 
 ```
 
